<resources>
    <string name="title_favorites">Home</string>
    <string name="title_library">Library</string>
    <string name="title_trends">Trends</string>
    <string name="title_rooms">Rooms</string>
    <string name="alt_image">Image</string>
    <string name="app_name">Welcome to ZenTunes</string>
    <string name="end">-1:11</string>
    <string name="btn">LIKE</string>
    <string name = "message">Great! You\'ll get more songs like this</string>
    <string name="lo">TODO</string>
    <string name="num">0:11</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="extra">TODO</string>
    <string name="s">TODO</string>
    <string name="song_title">Song Title</string>
    <string name="you">TODO</string>
    <string name="artist">Artist</string>
    <string name="greeting">Hello Sarah!</string>
</resources>