<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_rooms"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_rooms" />
    <item
        android:id="@+id/navigation_trends"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_trends" />

</menu>