<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorites">

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.mhapp4.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.mhapp4.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_trends"
        android:name="com.example.mhapp4.ui.trends.TrendsFragment"
        android:label="@string/title_trends"
        tools:layout="@layout/fragment_trends" />

    <fragment
        android:id="@+id/navigation_rooms"
        android:name="com.example.mhapp4.ui.trends.TrendsFragment"
        android:label="@string/title_trends"
        tools:layout="@layout/fragment_rooms" />
</navigation>